--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="prism/prism.css" />
-    <link rel="stylesheet" href="/app.css" />
+    <link rel="stylesheet" href="/eslint-config-magic/app.css" />
     <script>
       window.routerBase = "/";
     </script>
@@ -15,6 +15,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/app.js"></script>
+    <script src="/eslint-config-magic/app.js"></script>
   </body>
 </html>
