--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="prism/prism.css" />
     <link rel="stylesheet" href="/eslint-config-magic/app.css" />
     <script>
-      window.routerBase = "/";
+      window.routerBase = "/eslint-config-magic/";
     </script>
   </head>
   <body>
